--- a/app/src/main/res/layout/fragment_shark_feed_gallery.xml
+++ b/app/src/main/res/layout/fragment_shark_feed_gallery.xml
@@ -1,13 +1,14 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
+                                              android:id="@+id/swipe_container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.android.yahoo.sharkfeed.fragment.SharkFeedGalleryFragment">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/shark_feed_gallery_recycler_view"
-    />
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/shark_feed_gallery_recycler_view"
+        />
 
-</FrameLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
