--- a/app/src/main/res/layout/fragment_light_box.xml
+++ b/app/src/main/res/layout/fragment_light_box.xml
@@ -6,19 +6,22 @@
              tools:context="com.android.yahoo.sharkfeed.fragment.LightBoxFragment">
 
 
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="4dp"
-        android:visibility="gone"
-        android:layout_gravity="center_vertical"
-        />
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/highQualityImageView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/ic_image_black_24px"/>
 
         <View
             android:id="@+id/view3"
@@ -30,7 +33,7 @@
             android:layout_marginRight="8dp"
             app:layout_constraintLeft_toLeftOf="@+id/highQualityImageView"
             app:layout_constraintRight_toRightOf="@+id/highQualityImageView"
-            app:layout_constraintBottom_toTopOf="@+id/button2"
+            app:layout_constraintBottom_toTopOf="@+id/download_image_btn"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"/>
 
@@ -47,7 +50,7 @@
             android:layout_marginStart="16dp"/>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/download_image_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -68,17 +71,15 @@
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="8dp"/>
 
-        <ImageView
-            android:id="@+id/highQualityImageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:srcCompat="@drawable/ic_image_black_24px"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="1.0"
-            app:layout_constraintBottom_toBottomOf="parent"/>
     </android.support.constraint.ConstraintLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="4dp"
+        android:visibility="gone"
+        />
 </FrameLayout>
