Implemented View Pager to implement swipe to start feeding functionality

--- a/app/src/main/res/layout/fragment_shark_feed_gallery.xml
+++ b/app/src/main/res/layout/fragment_shark_feed_gallery.xml
@@ -1,14 +1,30 @@
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:id="@+id/swipe_container"
-             tools:context="com.android.yahoo.sharkfeed.fragment.SharkFeedGalleryFragment">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:orientation="vertical">
 
-<android.support.v7.widget.RecyclerView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/shark_feed_gallery_recycler_view"
-    />
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/fragment_shark_feed_gallery_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        />
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/swipe_container">
 
-</android.support.v4.widget.SwipeRefreshLayout>
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/shark_feed_gallery_recycler_view"
+            />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+</LinearLayout>
+
+
