Removed swipe facility, added custom transition into lightbox, added progress bar, added loading low quality image before loading high quality image.

--- a/app/src/main/res/layout/fragment_shark_feed_gallery.xml
+++ b/app/src/main/res/layout/fragment_shark_feed_gallery.xml
@@ -2,6 +2,7 @@
               android:layout_height="match_parent"
               android:layout_width="match_parent"
               xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:id="@+id/fragmentSharkFeedLinearLayout"
               android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -25,6 +26,11 @@
             />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragment_child_container"/>
 </LinearLayout>
 
 
