--- a/app/src/main/res/layout/fragment_light_box.xml
+++ b/app/src/main/res/layout/fragment_light_box.xml
@@ -6,76 +6,96 @@
              tools:context="com.android.yahoo.sharkfeed.fragment.LightBoxFragment">
 
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/highQualityImageView"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/ic_image_black_24px"/>
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="fitCenter"
+            android:background="#000000"
+            android:transitionName="@string/sharkFeedTransition"
+            app:srcCompat="@drawable/img_placeholder_shark"/>
 
-        <View
-            android:id="@+id/view3"
-            android:layout_width="0dp"
-            android:layout_height="2dp"
-            android:background="?android:attr/dividerHorizontal"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/highQualityImageView"
-            app:layout_constraintRight_toRightOf="@+id/highQualityImageView"
-            app:layout_constraintBottom_toTopOf="@+id/download_image_btn"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"/>
+    <LinearLayout
+        android:id="@+id/photoOptionsLinearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:orientation="vertical"
+        android:visibility="gone">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginLeft="16dp"
-            android:text="TextView"
-            app:layout_constraintBottom_toTopOf="@+id/view3"
-            app:layout_constraintLeft_toLeftOf="parent"
-            tools:text="Sample Text"
-            android:layout_marginStart="16dp"/>
+            android:layout_marginRight="16dp"
+            android:orientation="vertical">
 
-        <Button
-            android:id="@+id/download_image_btn"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/imageTitleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:textColor="#ffffff"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="Image title or description"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_margin="4dp"
+                android:background="#ffffff"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginLeft="8dp"
-            android:text="Button"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="8dp"/>
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Button"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="8dp"/>
+            <Button
+                android:id="@+id/downloadImageBtn"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_weight="0.5"
+                android:drawableStart="@drawable/ic_download_image"
+                android:padding="8dp"
+                android:text="@string/download_image"
+                android:textAlignment="textStart"
+                android:textColor="#ffffff"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                />
 
-    </android.support.constraint.ConstraintLayout>
+            <Button
+                android:id="@+id/openFlickrPgBtn"
+                style="@style/Base.Widget.AppCompat.Button.Borderless"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="0.5"
+                android:drawableStart="@drawable/ic_open_in_flickr"
+                android:padding="8dp"
+                android:text="@string/open_in_flickr"
+                android:textAlignment="textStart"
+                android:textColor="#ffffff"
+                />
+
+        </LinearLayout>
+    </LinearLayout>
+
 
     <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
+        android:id="@+id/lightBoxImgProgressBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
