--- a/app/src/main/res/layout/fragment_light_box.xml
+++ b/app/src/main/res/layout/fragment_light_box.xml
@@ -6,18 +6,29 @@
              tools:context="com.android.yahoo.sharkfeed.fragment.LightBoxFragment">
 
 
+    <ImageView
+        android:id="@+id/high_quality_image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#000000"
+        android:scaleType="fitCenter"
+        android:transitionName="@string/sharkFeedTransition"
+        app:srcCompat="@drawable/img_placeholder_shark"/>
 
         <ImageView
-            android:id="@+id/highQualityImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="fitCenter"
-            android:background="#000000"
-            android:transitionName="@string/sharkFeedTransition"
-            app:srcCompat="@drawable/img_placeholder_shark"/>
+            android:id="@+id/photo_info_image_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:padding="8dp"
+            android:visibility="gone"
+            android:layout_marginEnd="16dp"
+            android:layout_gravity="end"
+            app:srcCompat="@drawable/ic_info_outline_white_24dp"
+            />
 
     <LinearLayout
-        android:id="@+id/photoOptionsLinearLayout"
+        android:id="@+id/photo_options_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
@@ -32,7 +43,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/imageTitleTextView"
+                android:id="@+id/image_title_text_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
@@ -61,7 +72,7 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/downloadImageBtn"
+                android:id="@+id/download_image_button"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -77,7 +88,7 @@
                 />
 
             <Button
-                android:id="@+id/openFlickrPgBtn"
+                android:id="@+id/open_flickr_page_button"
                 style="@style/Base.Widget.AppCompat.Button.Borderless"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -95,7 +106,7 @@
 
 
     <ProgressBar
-        android:id="@+id/lightBoxImgProgressBar"
+        android:id="@+id/light_box_image_progress_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
